@@ -240,7 +240,6 @@
 			</div>
 		</div>
 		<canvas style="display: none; position: absolute" id="cell_popup" width="400" height="200"></canvas>
-		<canvas style="display: none" id="text_buffer" width="1000" height="1000"></canvas>
 		
 		<div class="dialog-screen" id="dialog_box">
 			<div class="simple" id="dialog_simple">
