@@ -12,7 +12,7 @@ function SkyFortressUnit(pos_x, pos_y, player)
 		var top_x = this.position.x - game.viewport_x + 0.5 - this._proto.parts[0].hotspots[this.parts[0].direction][0].x, 
 			top_y = this.position.y - game.viewport_y + this._proto.parts[0].image_size.y - 12.5,
 			sel_width = this._proto.parts[0].image_size.x, health_width = parseInt(sel_width*0.63),
-			ammo_proc = 1; //@todo Make rechargable weapon
+			ammo_proc = Math.min(1, this.parts[0].weapon.getDelayState());
 		
 		top_x += parseInt((sel_width - health_width)/2) + 0.5;
 		game.viewport_ctx.fillStyle = '#000000';
@@ -24,7 +24,7 @@ function SkyFortressUnit(pos_x, pos_y, player)
 			game.viewport_ctx.fillRect(top_x + 1, top_y-0.5, health_width - 2, 2);
 		}
 		
-		game.viewport_ctx.fillStyle = '#00a5ff';
+		game.viewport_ctx.fillStyle = (ammo_proc == 1) ? '#00a5ff' : '#ffffff';
 		game.viewport_ctx.fillRect(top_x + 1, top_y-0.5, (health_width - 2)*ammo_proc, 2);
 	};
 }
